--- a/pages/AddPersonnel/index.html
+++ b/pages/AddPersonnel/index.html
@@ -38,7 +38,7 @@
                 <img style=" width:180px;" />
               </div>
               <span>图片大小180*180</span>
-              <input type="text" name="iconurl" id="iconurl" value="" hidden>
+              <input type="text" name="iconurl" id="iconurl" hidden>
               <input type="file" name="icon" id="icon" nullmsg="请上传头像" placeholder="请上传头像" accept="image/jpeg,image/png,image/jpg,image/gif"
                 width="30%" style="margin-bottom:10px;">
             </td>
