--- a/pages/AddUser/index.html
+++ b/pages/AddUser/index.html
@@ -79,6 +79,14 @@
                     </tr>
 
                     <tr>
+                        <td align="center">可添加部门</td>
+                        <td>
+                            <input type="text" class="form-control" id="addDepartment" placeholder="可添加部门" value=""  style="width:40%;display:inline-block;">
+                            <button type="button" class="btn btn-gray" id="addDepartment-btn" style="display:inline-block;"><i class="fa fa-plus" aria-hidden="true"></i> 增添部门</button>
+                        </td>
+                    </tr>
+
+                    <tr>
                         <td align="center">部门</td>
                         <td>
                             <select class="form-control" name="department" id="department" datatype="*" nullmsg="请选择部门名称" placeholder="请选择部门名称">
