--- a/pages/AddCompany/index.html
+++ b/pages/AddCompany/index.html
@@ -30,7 +30,7 @@
 
                     <tr>
                         <td align="center">密码</td>
-                        <td><input type="password" name="password" id="company_password" value="" class="form-control" placeholder="请输入密码" datatype="/^(\d{0}|\d{6,16})$/" errormsg="应输入为6-15位的密码"></td>
+                        <td><input type="password" name="password" id="company_password" value="" class="form-control" placeholder="请输入密码" datatype="/^[0-9A-Za-z]{0}|[0-9A-Za-z]{6,16}$/" errormsg="应输入为6-15位的密码"></td>
                     </tr>
 
                     <tr>
