--- a/pages/CompanyList/index.html
+++ b/pages/CompanyList/index.html
@@ -63,7 +63,7 @@
                     <th>详细地址</th>
                     <th>公司名称</th>
                     <th>负责人姓名</th>
-                    <!-- <th>联系电话</th> -->
+                    <th>联系电话</th>
                     <th>开户时间</th>
                     <th>截止时间</th>
                     <th>后台账号</th>
