--- a/pages/UserList/index.html
+++ b/pages/UserList/index.html
@@ -105,5 +105,5 @@
 </body>
 
 <script src="./userList.js"></script>
-<!-- <script src="./exportXls.js"></script> -->
+<script src="./exportXls.js"></script>
 </html>
