--- a/pages/EditBusiness/1.html
+++ b/pages/EditBusiness/1.html
@@ -62,6 +62,10 @@
       margin-top: 8px;
       border-radius: 5px;
     }
+    .thStyle{
+      border-right: 1px solid #e6e6e6;
+      text-align: center;
+    }
     label{ padding:0 10px; margin:0; height:50px; line-height:50px; cursor:pointer;}
 	.departureDiv{display: none;}
   </style>
@@ -156,19 +160,19 @@
                 <td class="contactTd" colspan="2">
                   <div style="padding-left: 6px;margin-bottom: -10px;border-top: 1px solid #e6e6e6;">*请选择下列联系人进行修改:</div>
                   <div style="height:200px;overflow-x:auto;padding: 10px;">
-                    <table width="80%" style="height:200px;overflow-x:auto;" cellspacing="0" cellpadding="0">
+                    <table width="80%" style="height:200px;overflow-x:auto;text-align: center;" cellspacing="0" cellpadding="0">
                       <input type="text" id="linksKeyOld" hidden>
                       <input type="text" id="linksKeyNew" hidden>
                       <input type="text" id="linksOtherOld" hidden>
                       <input type="text" id="linksKeyNew" hidden>
-                      <thead>
+                      <thead style="border: 1px solid #e6e6e6;">
                         <tr>
-                          <th>选择</th>
-                          <th>序号</th>
-                          <th>ID</th>
-                          <th>姓名</th>
-                          <th>公司</th>
-                          <th>职位</th>
+                          <th class="thStyle" >选择</th>
+                          <th class="thStyle">序号</th>
+                          <th class="thStyle">ID</th>
+                          <th class="thStyle">姓名</th>
+                          <th class="thStyle">公司</th>
+                          <th class="thStyle">职位</th>
                         </tr>
                       </thead>
                       <tbody class="customerList">
@@ -196,15 +200,15 @@
               </div> -->
               <div style="height:200px;overflow-x:auto;padding: 10px;">
                 <table width="80%" style="height:200px;overflow-x:auto;" cellspacing="0" cellpadding="0">
-                  <thead>
+                  <thead style="border: 1px solid #e6e6e6;">
                     <tr>
-                      <th>选择</th>
-                      <th>序号</th>
-                      <th>ID</th>
-                      <th>姓名</th>
-                      <th>手机号</th>
-                      <th>部门</th>
-                      <th>头像</th>
+                      <th class="thStyle">选择</th>
+                      <th class="thStyle">序号</th>
+                      <th class="thStyle">ID</th>
+                      <th class="thStyle">姓名</th>
+                      <th class="thStyle">手机号</th>
+                      <th class="thStyle">部门</th>
+                      <th class="thStyle">头像</th>
                     </tr>
                   </thead>
                   <tbody class="userList">
