--- a/pages/AddMessage/index.html
+++ b/pages/AddMessage/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>添加消息</title>
     <script src="/js/load.js"></script>
+    <script src="/tools/ueditor1_4_3-utf8-php/ueditor.config.js"></script>
+    <script src="/tools/ueditor1_4_3-utf8-php/ueditor.all.min.js"></script>
+    <script src="/tools/ueditor1_4_3-utf8-php/lang/zh-cn/zh-cn.js"></script>
     <link rel="stylesheet" href="/css/rightCommon.css">
 </head>
 
@@ -16,29 +19,27 @@
     </nav>
 
     <div class="add-box">
-        <form class="addForm ajax-fadein" id="form1" name="form1" method="post" action="/manage.php/Common/addData/controller/Business/backUrl/businessList/table/business">
+        <form class="addForm ajax-fadein" id="form1" name="form1">
             <input name="id" type="hidden" id="id" value="">
             <table width="100%" border="0" cellspacing="0" cellpadding="0">
                 <tbody>
                     <tr>
                         <td align="center">消息标题</td>
-                        <td><input type="text" name="business_name" id="business_name" class="form-control" datatype="*"
+                        <td><input type="text" name="title" id="message_title" class="form-control" datatype="*"
                                 nullmsg="请输入消息标题" placeholder="请输入消息标题"></td>
                     </tr>
 
                     <tr>
                         <td align="center">消息内容</td>
-                        <td><input type="text" name="business_tel" id="business_tel" class="form-control" datatype="*"
-                                nullmsg="请输入消息内容" placeholder="请输入消息内容"></td>
+                        <td colspan="3"><textarea name="message" id="message_content" cols="45" rows="5" style="width:100%;height:200px; margin:10px 0px;"></textarea></td>
                     </tr>
 
                     <tr>
                         <td align="center">选择接收用户</td>
                         <td colspan="3">
                             <select class="form-control" name="moduleType">
-                                <option value="" selected="">管理员</option>
-                                <option value="=0">普通用户</option>
-                                <option value="<>0">超级管理员</option>
+                                <option value="" selected="">平台用户</option>
+                                <option value="=0">公司名称</option>
                             </select>
                         </td>
                     </tr>
@@ -46,7 +47,7 @@
                     <tr>
                         <td>&nbsp;</td>
                         <td>
-                            <button type="submit" class="btn btn-success" id="saveButton"><i class="fa fa-check"
+                            <button type="button" class="btn btn-success" id="saveButton"><i class="fa fa-check"
                                     aria-hidden="true"></i> 添加</button>
                             <button type="button" class="btn btn-default" id="cancelButton"><i class="fa fa-times"
                                     aria-hidden="true"></i> 取消</button>
@@ -56,8 +57,6 @@
             </table>
         </form>
     </div>
-
-
 </body>
-
+<script src="./addMessage.js"></script>
 </html>
