--- a/pages/BusinessDetail/index.html
+++ b/pages/BusinessDetail/index.html
@@ -119,7 +119,7 @@
                 </tr>
                 <tr>
                     <td align="center">操作历史</td>
-                    <td>操作历史</td>
+                    <td>操作历史</td>z
                 </tr>
                 <tr>
                     <td align="center">附件</td>
