--- a/pages/UserList/index.html
+++ b/pages/UserList/index.html
@@ -57,12 +57,12 @@
 <th>客户数量</th>
 <th>商机数量</th>
 <th>公司</th>
-<th>讨论组</th>
-<th>分组</th>
-<th>标签</th>
+<th style="display:none;">讨论组</th>
+<th style="display:none;">分组</th>
+<th style="display:none;">标签</th>
 <th>密码</th>
 <th>企业索索历史</th>
-<th>用户总数</th>
+<th style="display:none;">用户总数</th>
 <th>操作</th>
 </tr>
 </thead>
