--- a/pages/CompanyList/index.html
+++ b/pages/CompanyList/index.html
@@ -16,7 +16,7 @@
 <body>
     <nav class="navbar navbar-default" role="navigation">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">公司管理</a>
+            <a class="navbar-brand" href="#"></a>公司管理</a>
         </div>
         <div>
             <button type="button" class="btn btn-danger navbar-btn listButton" onclick="deleteData('/deleteCompany','GET','companyId')"><i
@@ -57,7 +57,7 @@
                 <tr>
                     <th>选择</th>
                     <th>序号</th>
-                    <th>用户编号</th>
+                    <th>公司编号</th>
                     <th>状态</th>
                     <th>所在地区</th>
                     <th>详细地址</th>
