--- a/pages/FieldManage/index.html
+++ b/pages/FieldManage/index.html
@@ -16,11 +16,7 @@
         <div>
             <button type="button" class="btn btn-danger navbar-btn listButton" onclick="deleteData('')"><i class="fas fa-trash-alt"></i>删除</button>
             <!-- <button type="button" class="btn btn-info navbar-btn listButton" onclick="editData('add')"><i class="fas fa-edit"></i>修改</button> -->
-            <button type="button" class="btn btn-success navbar-btn listButton" onclick="openAddData('')"><i class="fa fa-plus" aria-hidden="true"></i> 新建</button>
-            <!-- <form class="navbar-form navbar-right listSearch" role="search" method="get" action="__ACTION__">
-                    <input name="keyWord" type="text" class="form-control" id="keyWord" placeholder="请输入编号搜索">
-                    <button type="submit" class="btn btn-primary"><i class="fa fa-search" aria-hidden="true"></i> 搜索</button>
-            </form> -->
+            <button type="button" class="btn btn-success navbar-btn listButton" onclick="openAddData('../AddField/index.html')"><i class="fa fa-plus" aria-hidden="true"></i> 新建</button>
         </div>
     </nav>
 
