--- a/pages/BusinessDetail/index.html
+++ b/pages/BusinessDetail/index.html
@@ -42,7 +42,7 @@
     <!--alert弹窗end  -->
     <nav class="navbar navbar-default" role="navigation">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">商机详情</a>
+            <span class="navbar-brand">商机详情</span>
         </div>
     </nav>
 
