--- a/pages/CustomerList/index.html
+++ b/pages/CustomerList/index.html
@@ -14,7 +14,7 @@
 
 	<nav class="navbar navbar-default" role="navigation">
 		<div class="navbar-header">
-			<a class="navbar-brand" href="#">客户信息管理</a>
+			<span class="navbar-brand">客户信息管理</span>
 		</div>
 		<div>
 			<button type="button" class="btn btn-danger navbar-btn listButton" onclick="deleteData('/customerDel','GET','Id')"><i
