--- a/pages/EditBusiness/index.html
+++ b/pages/EditBusiness/index.html
@@ -78,7 +78,7 @@
 
   <nav class="navbar navbar-default" role="navigation">
     <div class="navbar-header">
-    <a class="navbar-brand" href="#"><i class="fa fa-plus" aria-hidden="true"></i> 修改商机</a>
+    <span class="navbar-brand"><i class="fa fa-plus" aria-hidden="true"></i> 修改商机</span>
     </div>
   </nav>
 
