--- a/pages/FieldManage/index.html
+++ b/pages/FieldManage/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar navbar-default" role="navigation">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">弹性域字段管理</a>
+            <span class="navbar-brand">弹性域字段管理</span>
         </div>
         <div>
             <button type="button" class="btn btn-danger navbar-btn listButton" onclick="deleteData('')"><i class="fas fa-trash-alt"></i>删除</button>
