--- a/pages/MessageManage/index.html
+++ b/pages/MessageManage/index.html
@@ -16,7 +16,7 @@
 
     <nav class="navbar navbar-default" role="navigation">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">查看消息列表</a>
+            <span class="navbar-brand">查看消息列表</span>
         </div>
         <div>
             <button type="button" class="btn btn-danger navbar-btn listButton" onclick="deleteData('/message/delMessage','GET','id')"><i class="fas fa-trash-alt"></i>
