--- a/pages/StageManage/index.html
+++ b/pages/StageManage/index.html
@@ -15,7 +15,7 @@
 <body>
     <nav class="navbar navbar-default" role="navigation">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">阶段管理</a>
+            <span class="navbar-brand">阶段管理</span>
         </div>
         <div>
             <button type="button" class="btn btn-danger navbar-btn listButton" onclick="deleteData('/permission/deleteStage','GET','stageIds')"><i
