--- a/pages/About/index.html
+++ b/pages/About/index.html
@@ -58,7 +58,7 @@
 <body>
     <nav class="navbar navbar-default" role="navigation">
         <div class="navbar-header">
-            <a class="navbar-brand" href=" "><i class="fa fa-plus" aria-hidden="true"></i>关于我们</a>
+            <span class="navbar-brand"><i class="fa fa-plus" aria-hidden="true"></i>关于我们</span>
         </div>
     </nav>
 
