--- a/pages/AddCompany/index.html
+++ b/pages/AddCompany/index.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar navbar-default" role="navigation">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#"><i class="fa fa-plus" aria-hidden="true"></i> <span id="changeTitle">添加</span>公司管理</a>
+            <span class="navbar-brand"><i class="fa fa-plus" aria-hidden="true"></i> <span id="changeTitle">添加</span>公司管理</span>
         </div>
     </nav>
 
