--- a/pages/AddMessage/index.html
+++ b/pages/AddMessage/index.html
@@ -46,7 +46,7 @@
 <body>
     <nav class="navbar navbar-default" role="navigation">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#"><i class="fa fa-plus" aria-hidden="true"></i> <span id="changeTitle">添加</span>消息</a>
+            <span class="navbar-brand"><i class="fa fa-plus" aria-hidden="true"></i> <span id="changeTitle">添加</span>消息</span>
         </div>
     </nav>
 
