--- a/pages/AddPersonnel/index.html
+++ b/pages/AddPersonnel/index.html
@@ -16,7 +16,7 @@
 <body>
   <nav class="navbar navbar-default" role="navigation">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#"><i class="fa fa-plus" aria-hidden="true"></i> <span id="changeTitle">添加</span>人员</a>
+      <span class="navbar-brand"><i class="fa fa-plus" aria-hidden="true"></i> <span id="changeTitle">添加</span>人员</span>
     </div>
   </nav>
 
