--- a/pages/AddRole/index.html
+++ b/pages/AddRole/index.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar-default" role="navigation">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#"><i class="fa fa-plus" aria-hidden="true"></i> <span id="changeTitle">添加</span>角色</a>
+            <span class="navbar-brand"><i class="fa fa-plus" aria-hidden="true"></i> <span id="changeTitle">添加</span>角色</span>
         </div>
     </nav>
 
