--- a/pages/AddUser/index.html
+++ b/pages/AddUser/index.html
@@ -15,7 +15,7 @@
 <body>
     <nav class="navbar navbar-default" role="navigation">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#"><i class="fa fa-plus" aria-hidden="true"></i> <span id="changeTitle">添加</span>用户</a>
+            <span class="navbar-brand"><i class="fa fa-plus" aria-hidden="true"></i> <span id="changeTitle">添加</span>用户</span>
         </div>
     </nav>
 
