--- a/pages/BusinessList/index.html
+++ b/pages/BusinessList/index.html
@@ -19,7 +19,7 @@
 
 <nav class="navbar navbar-default" role="navigation">
 <div class="navbar-header">
-<a class="navbar-brand" href="#">查看商机列表</a>
+<span class="navbar-brand">查看商机列表</span>
 </div>
 <div>
 <button type="button" class="btn btn-danger navbar-btn listButton" onclick="deleteData('/deleteOpportunity','GET','opportunityId')"><i class="fas fa-trash-alt"></i> 删除</button>
