--- a/pages/CompanyList/index.html
+++ b/pages/CompanyList/index.html
@@ -16,7 +16,7 @@
 <body>
     <nav class="navbar navbar-default" role="navigation">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">公司管理</a>
+            <span class="navbar-brand">公司管理</span>
         </div>
         <div>
             <button type="button" class="btn btn-danger navbar-btn listButton" onclick="deleteData('/deleteCompany','GET','companyId')"><i
