--- a/pages/CustomerDetail/index.html
+++ b/pages/CustomerDetail/index.html
@@ -25,7 +25,7 @@
 
 	<nav class="navbar navbar-default" role="navigation">
 		<div class="navbar-header">
-			<a class="navbar-brand" href="#"> 查看客户信息</a>
+			<span class="navbar-brand"> 查看客户信息</span>
 		</div>
 		<!-- <button type="button" class="btn btn-danger navbar-btn listButton" onclick="deleteData('Oa_customer')"><i class="fas fa-trash-alt"></i> 删除</button> -->
 	</nav>
