--- a/pages/PersonnelManage/index.html
+++ b/pages/PersonnelManage/index.html
@@ -15,7 +15,7 @@
 
 <nav class="navbar navbar-default" role="navigation">
 <div class="navbar-header">
-<a class="navbar-brand" href="#">人员管理</a>
+<span class="navbar-brand">人员管理</span>
 </div>
 <div>
 <button type="button" class="btn btn-danger navbar-btn listButton" onclick="deleteData('/console/userDelete','GET','id')"><i class="fas fa-trash-alt"></i> 删除</button>
