--- a/pages/RoleManage/index.html
+++ b/pages/RoleManage/index.html
@@ -17,7 +17,7 @@
 
     <nav class="navbar navbar-default" role="navigation">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">角色管理</a>
+            <span class="navbar-brand">角色管理</span>
         </div>
         <div>
             <button type="button" class="btn btn-danger navbar-btn listButton" onclick="deleteData('/role/deleteRole','POST','roleId')"><i
