--- a/pages/UserList/index.html
+++ b/pages/UserList/index.html
@@ -14,7 +14,7 @@
 
 <nav class="navbar navbar-default" role="navigation">
 <div class="navbar-header">
-<a class="navbar-brand" href="#">用户信息管理</a>
+<span class="navbar-brand">用户信息管理</span>
 </div>
 <div>
 <button type="button" class="btn btn-danger navbar-btn listButton" onclick="deleteData('/deleteUser','GET','userId')"><i class="fas fa-trash-alt"></i> 删除</button>
@@ -60,12 +60,12 @@
 <th>客户数量</th>
 <th>商机数量</th>
 <th>公司</th>
-<th style="display:none;">讨论组</th>
-<th style="display:none;">分组</th>
-<th style="display:none;">标签</th>
+<th>讨论组</th>
+<th>分组</th>
+<th>标签</th>
 <th>密码</th>
-<th>企业索索历史</th>
-<th style="display:none;">用户总数</th>
+<th>企业搜搜历史</th>
+<th>用户总数</th>
 <th>操作</th>
 </tr>
 </thead>
